fixed placement of github link on smaller screens

--- a/sass/activatoradmin.scss
+++ b/sass/activatoradmin.scss
@@ -3,7 +3,7 @@ $primary-text-color: #444444;
 
 $large-width: 991px;
 $medium-width: 768px;
-$small-width: 450px;
+$small-width: 485px;
 
 body {
   background: $primaary-bg-color;
@@ -278,6 +278,11 @@ body {
 
     .divider {
       height: 65px;
+    }
+
+    .github {
+      float: left;
+      margin: 30px 0 0 15px;
     }
   }
 }
